Change URLEncoder.encode() version to prevent compiler errors with java 8